modify the source/index.html

--- a/source/index.html
+++ b/source/index.html
@@ -1,31 +1,108 @@
 ---
 layout: default
+sidebar: false
 ---
 
-<div class="blog-index">
-	{% assign index = true %}
-	{% for post in paginator.posts %}
-	{% assign content = post.content %}
-	<article>
-		{% include article.html %}
-	</article>
-	{% endfor %}
-	<div class="pagination">
-		{% if paginator.next_page %}
-		<a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
-		{% endif %}
-		<a href="/blog/archives">Blog Archives</a>
-		{% if paginator.previous_page %}
-		<a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
-		{% endif %}
-	</div>
-	
-</div>
+<p>
+	<center>
+		<br />
+		<img src="{{ root_url }}/images/the-evolution-of-apple.jpg" alt="Steve Jobs Poem" title="the-evolution-of-apple" class="alignnone size-full wp-image-258" />
+		<br />
+		<br />
+		<h2 class="posttitle">A Poem for Apple&#8217;s Steve Jobs</h2>
+		<div class="postInfo">
+			Author: <a href="https://google.com/+FranCisMoRilao" rel="author">Francis Morilao</a> • <a href="http://www.poemslovestories.com/literature/poetry/" title="View all posts in Poetry" rel="category tag">Poetry</a>
+		</div>
+		<br />
+		<br />
+		Five letter word starting with <strong>A</strong>,
+		<br />
+		Example of a fruit in the alphabet;
+		<br />
+		Everyone can easily guess,
+		<br />
+		First thing in mind you won&#8217;t regret.
+</p>
+<p>
+	Someone had a bite on that fruit,
+	<br />
+	And it became a big dispute;
+	<br />
+	When he invented a new way to compute,
+	<br />
+	Everyone started to salute.
+</p>
+<p>
+	Just recently we heard the news,
+	<br />
+	This man leaves us in blues;
+	<br />
+	All of them who follow his shoes,
+	<br />
+	Pay homage and amazing tributes.
+</p>
+<p>
+	So whenever you see an apple,
+	<br />
+	You will probably can recall;
+	<br />
+	The man who stood tall,
+	<br />
+	Steve Jobs leaves us an example.
+</p>
+<p>
+	He changed the way we think,
+	<br />
+	Improved the way we live;
+	<br />
+	After all of what he&#8217;s done,
+	<br />
+	Now, he is gone.
+</p>
+<p>
+	RIP Steve Jobs
+	<br />
+	1955 &#8211; 2011
+</p>
+<p>
+	<!-- Creative Commons License -->
+	<center>
+		<a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nd/3.0/88x31.png" /></a>
+		<br />
+		<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Poem for Apple&#8217;s Steve Jobs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://google.com/+FranCisMoRilao" property="cc:attributionName" rel="cc:attributionURL">Francis Morilao</a><small>is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US">Creative Commons Attribution-NoDerivs 3.0 Unported License</a>. Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.poemslovestories.com" rel="dct:source">www.PoemsLoveStories.com</a>. Permissions beyond the scope of this license may be available at the site's <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.poemslovestories.com/contact" rel="cc:morePermissions">Contact Page</a>.</small>
+	</center>
+	<!-- Creative Commons License end -->
+	<br />
+	<img src="{{ root_url }}/images/apple.png" alt="Steve Jobs Poem" title="apple and steve jobs" class="alignnone size-full wp-image-258" />
+
+	</center>
+</p>
 
 <!-- <aside class="sidebar">
-		{% if site.blog_index_asides.size %}
-			{% include_array blog_index_asides %}
-		{% else %}
-			{% include_array default_asides %}
-		{% endif %}
-	</aside> -->
+{% if site.blog_index_asides.size %}
+{% include_array blog_index_asides %}
+{% else %}
+{% include_array default_asides %}
+{% endif %}
+</aside> -->
+
+<!-- <div class="blog-index">
+{% assign index = true %}
+{% for post in paginator.posts %}
+{% assign content = post.content %}
+<article>
+{% include article.html %}
+</article>
+{% endfor %}
+<div class="pagination">
+{% if paginator.next_page %}
+<a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
+{% endif %}
+<a href="/blog/archives">Blog Archives</a>
+{% if paginator.previous_page %}
+<a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
+{% endif %}
+</div>
+
+</div> -->
+
