add cnzz statics in footer

--- a/source/index.html
+++ b/source/index.html
@@ -85,6 +85,8 @@ sidebar: false
 	</p>
 </center>
 
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1000165127'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000165127%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+
 <!-- <aside class="sidebar">
 {% if site.blog_index_asides.size %}
 {% include_array blog_index_asides %}
