modify 404,index, add return to top and copyright

--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 sidebar: false
+footer: false
 ---
 
 <center>
@@ -67,7 +68,10 @@ sidebar: false
 			<p>
 				RIP Steve Jobs
 				<br />
-				1955 &#8211; 2011<br /><br /><br />
+				1955 &#8211; 2011
+				<br />
+				<br />
+				<br />
 			</p></td>
 		</tr>
 	</table>
@@ -76,42 +80,17 @@ sidebar: false
 		<center>
 			<a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nd/3.0/88x31.png" /></a>
 			<br />
-			<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Poem for Apple&#8217;s Steve Jobs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://google.com/+FranCisMoRilao" property="cc:attributionName" rel="cc:attributionURL">Francis Morilao</a><small>is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US">Creative Commons Attribution-NoDerivs 3.0 Unported License</a>. Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.poemslovestories.com" rel="dct:source">www.PoemsLoveStories.com</a>. Permissions beyond the scope of this license may be available at the site's <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.poemslovestories.com/contact" rel="cc:morePermissions">Contact Page</a>.</small>
+			<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Poem for Apple&#8217;s Steve Jobs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://google.com/+FranCisMoRilao" property="cc:attributionName" rel="cc:attributionURL">Francis Morilao</a><small>is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US">Creative Commons Attribution-NoDerivs 3.0 Unported License</a>.
+				<br/>
+				Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.poemslovestories.com" rel="dct:source">www.PoemsLoveStories.com</a>. Permissions beyond the scope of this license may be available at the site's <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.poemslovestories.com/contact" rel="cc:morePermissions">Contact Page</a>.</small>
 		</center>
 		<!-- Creative Commons License end -->
+		<script type="text/javascript">
+			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+			document.write(unescape("%3Cspan id='cnzz_stat_icon_1000165127'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000165127%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
+		</script>
 		<br />
 		<img src="{{ root_url }}/images/apple.png" alt="Steve Jobs Poem" title="apple and steve jobs" class="alignnone size-full wp-image-258" />
-
 	</p>
 </center>
-
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1000165127'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000165127%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
-
-<!-- <aside class="sidebar">
-{% if site.blog_index_asides.size %}
-{% include_array blog_index_asides %}
-{% else %}
-{% include_array default_asides %}
-{% endif %}
-</aside> -->
-
-<!-- <div class="blog-index">
-{% assign index = true %}
-{% for post in paginator.posts %}
-{% assign content = post.content %}
-<article>
-{% include article.html %}
-</article>
-{% endfor %}
-<div class="pagination">
-{% if paginator.next_page %}
-<a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
-{% endif %}
-<a href="/blog/archives">Blog Archives</a>
-{% if paginator.previous_page %}
-<a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
-{% endif %}
-</div>
-
-</div> -->
 
