change the index page

--- a/source/index.html
+++ b/source/index.html
@@ -6,86 +6,101 @@ footer: false
 <center>
 	<p>
 		<br />
-		<h2 class="posttitle">A Poem for Apple&#8217;s Steve Jobs</h2>
+		<h2 class="posttitle">相信未来</h2>
 		<div class="postInfo">
-			Author: <a href="https://google.com/+FranCisMoRilao" rel="author">Francis Morilao</a> • <a href="http://www.poemslovestories.com/literature/poetry/" title="View all posts in Poetry" rel="category tag">Poetry</a>
+			作者: 郭路生 
 		</div>
 	</p>
 
 	<table>
 		<tr>
-			<td width="50%p" style="text-align: center;padding-right: 10px; border-right: dashed 2px #CDCD9A;" >
+			<td width="50%p" style="text-align: left;padding-right: 10px; border-right: dashed 2px #CDCD9A;" >
 			<p>
-				Five letter word starting with <strong>A</strong>,
+				当蜘蛛网无情地查封了我的炉台，
 				<br />
-				Example of a fruit in the alphabet;
+				当灰烬的余烟叹息着贫困的悲哀，
 				<br />
-				Everyone can easily guess,
+				我依然固执地铺平失望的灰烬，
 				<br />
-				First thing in mind you won&#8217;t regret.
+				用美丽的雪花写下：相信未来。
 			</p>
 			<p>
-				Someone had a bite on that fruit,
+				当我的紫葡萄化为深秋的露水，
 				<br />
-				And it became a big dispute;
+				当我的鲜花依偎在别人的情怀，
 				<br />
-				When he invented a new way to compute,
+				我依然固执地用凝霜的枯藤，
 				<br />
-				Everyone started to salute.
+				在凄凉的大地上写下：相信未来。
 			</p>
 			<p>
-				Just recently we heard the news,
+				我要用手指向那涌向天边的排浪，
 				<br />
-				This man leaves us in blues;
+				我要用手撑起那托住太阳的大海，
 				<br />
-				All of them who follow his shoes,
+				摇曳着曙光那枝温暖漂亮的笔杆，
 				<br />
-				Pay homage and amazing tributes.
-			</p></td>
+				用孩子的笔体写下：相信未来。
+			</p>
+			<p>
+				我之所以坚定地相信未来，
+				<br />
+				是我相信未来人们的眼睛——
+				<br />
+				她有拨开历史风尘的睫毛，
+				<br />
+				她有看透岁月篇章的瞳孔。
+			</p>
+			</td>
 
-			<td width="50%p" style="text-align: center;">
+			<td width="50%p" style="text-align: left;padding-left: 30px;">
+			
 			<p>
-				So whenever you see an apple,
+				不管人们对于我们腐烂的皮肉，
 				<br />
-				You will probably can recall;
+				那些迷途的惆怅、失败的苦痛，
 				<br />
-				The man who stood tall,
+				是寄予感动的热泪、深切的同情，
 				<br />
-				Steve Jobs leaves us an example.
+				还是给以轻蔑的微笑、辛辣的嘲讽。
 			</p>
 			<p>
-				He changed the way we think,
+				我坚信人们对于我们的脊骨，
 				<br />
-				Improved the way we live;
+				那无数次地探索、迷途、失败和成功，
 				<br />
-				After all of what he&#8217;s done,
+				一定会给予热情、客观、公正的评定。
 				<br />
-				Now, he is gone.
+				是的，我焦急地等待着他们的评定。
 			</p>
 			<p>
-				RIP Steve Jobs
+				朋友，坚定地相信未来吧，
 				<br />
-				1955 &#8211; 2011
+				相信不屈不挠的努力，
 				<br />
+				相信战胜死亡的年轻，
 				<br />
+				相信未来，热爱生命。
+			</p>
+			<p>
+				1968年 北京
 				<br />
+				&nbsp;&nbsp;
+				<br />
+				&nbsp;&nbsp;
+				<br />
+				&nbsp;&nbsp;
 			</p></td>
 		</tr>
 	</table>
 	<p>
-		<!-- Creative Commons License -->
-		<center>
-			<a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nd/3.0/88x31.png" /></a>
-			<!-- Creative Commons License end -->
+		
 			<script type="text/javascript">
 				var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 				document.write(unescape("%3Cspan id='cnzz_stat_icon_1000165127'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000165127%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
 			</script>
 			<br />
-			<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">A Poem for Apple&#8217;s Steve Jobs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://google.com/+FranCisMoRilao" property="cc:attributionName" rel="cc:attributionURL">Francis Morilao</a><small>is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/3.0/deed.en_US">Creative Commons Attribution-NoDerivs 3.0 Unported License</a>.
-				<br/>
-				Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.poemslovestories.com" rel="dct:source">www.PoemsLoveStories.com</a>. Permissions beyond the scope of this license may be available at the site's <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.poemslovestories.com/contact" rel="cc:morePermissions">Contact Page</a>.</small>
-		</center>
+			</center>
 	</p>
 </center>
 
