make some changes

--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@ footer: false
 				<br />
 				那无数次地探索、迷途、失败和成功，
 				<br />
-				一定会给予热情、客观、公正的评定。
+				一定会给予热情、客观、公正的评定，
 				<br />
 				是的，我焦急地等待着他们的评定。
 			</p>
