back to octopress 2014-4-8

--- a/source/index.html
+++ b/source/index.html
@@ -84,17 +84,18 @@ footer: false
 				相信未来，热爱生命。
 			</p>
 			<p>
-				1968年 北京 
-				<script type="text/javascript">
+				1968年 北京 <script type="text/javascript">
 				var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 				document.write(unescape("%3Cspan id='cnzz_stat_icon_1000165127'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000165127%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
 			</script>
 				<br />
 				&nbsp;&nbsp;
 				<br />
-				&nbsp;&nbsp;
+				随性虽易，成功不易，且行且珍惜！
 				<br />
 				&nbsp;&nbsp;
+				<br />
+				
 			</p></td>
 		</tr>
 	</table>
