--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@ footer: false
 				<br />
 				随性虽易，成功不易，且行且珍惜！
 				<br />
-				&nbsp;&nbsp;
+				<a href="http://hujiaweibujidao.github.io/blog/archives/">>>>>看看都写了些啥玩意? :-) >>>></a>&nbsp;&nbsp;
 				<br />
 				
 			</p></td>
